# drf-yasg

./: .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  README.md  README.rst  bumpversion.cfg  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  changelog.rst  conf.py  custom_spec.rst  index.rst  settings.rst
requirements/: base.txt  docs.txt  heroku.txt  lint.txt  test.txt  testproj.txt
scripts/: build-docs.sh  check-docs.sh  docs.sh  format.sh  lint.sh  tox-filter.sh  update-ui.sh
src/drf_yasg2/: app_settings.py  apps.py  codecs.py  compat.py  generators.py  openapi.py  renderers.py  utils.py  views.py
src/drf_yasg2/inspectors/: base.py  field.py
src/drf_yasg2/management/commands/: generate_swagger.py
testproj/articles/: models.py  views.py
testproj/articles/migrations/: 0001_initial.py
testproj/people/migrations/: 0001_initial.py
testproj/snippets/: serializers.py  views.py
testproj/snippets/migrations/: 0001_initial.py
testproj/testproj/: inspectors.py  urls.py
testproj/testproj/settings/: base.py
testproj/todo/: models.py  views.py
testproj/todo/migrations/: 0001_initial.py
testproj/users/: method_serializers_with_typing.py  method_serializers_without_typing.py  serializers.py  views.py
tests/: conftest.py  test_form_parameters.py  test_get_basic_type_info_from_hint.py  test_management.py  test_reference_schema.py  test_referenceresolver.py  test_renderer_settings.py  test_schema_generator.py  test_schema_views.py  test_swaggerdict.py  test_versioning.py
tests/urlconfs/: non_public_urls.py
