[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.rst

[flake8]
max-line-length = 120
exclude = **/migrations/*
ignore = F405,W504

[isort]
skip = .eggs,.tox,docs,env,venv,node_modules
skip_glob = **/migrations/*
not_skip = __init__.py
atomic = true
multi_line_output = 5
line_length = 120
